feat(header,footer,not-found) created shared components

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,33 @@
-<p>about-us works!</p>
+<section class="container mt-md-5 mt-3">
+  <div class="row align-items-center justify-content-center gy-4">
+
+    <!-- Texto -->
+    <div class="col-12 col-md-6">
+      <h1 class="mb-3">Sobre o The Book</h1>
+      <p>
+        Bem-vindo ao <strong>The Book</strong>, o destino definitivo para os entusiastas da culinária! Seja você um chef experiente ou esteja apenas começando sua jornada na cozinha, o The Book foi projetado para ser sua fonte principal de descobertas, compartilhamento e exploração de receitas deliciosas de todo o mundo.
+      </p>
+
+      <h3 class="mt-4">Uma Comunidade para Amantes da Culinária</h3>
+      <p>
+        Acreditamos que cozinhar é mais do que preparar refeições; é uma maneira de conectar-se com outras pessoas, compartilhar experiências e expressar criatividade. Nosso aplicativo oferece uma comunidade vibrante onde os amantes da gastronomia podem se reunir, trocar ideias e inspirar uns aos outros com suas criações culinárias.
+      </p>
+
+      <h3 class="mt-4">Funcionalidades Principais</h3>
+      <ul>
+        <li><strong>Compartilhar Receitas:</strong> Publique suas receitas favoritas e compartilhe com a comunidade.</li>
+        <li><strong>Explorar e Salvar Receitas:</strong> Navegue por uma vasta coleção e salve suas favoritas na sua coleção pessoal.</li>
+      </ul>
+
+      <p class="mt-3">
+        O The Book é mais do que um livro de receitas; é um espaço onde paixões culinárias são nutridas e conexões duradouras são feitas. Junte-se a nós!
+      </p>
+    </div>
+
+    <!-- Imagem -->
+    <div class="col-12 col-md-6 text-center">
+      <img src="assets/img/sobreNos.png" alt="Chefe polvilhando" class="img-fluid rounded shadow-sm" />
+    </div>
+
+  </div>
+</section>
