--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,20 @@
-<p>not-found works!</p>
+<section class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card text-center shadow-lg p-4" style="max-width: 400px;">
+
+    <div class="card-body">
+      <h1 class="display-1 text-danger fw-bold">404</h1>
+      <h5 class="card-title mb-3">Página não encontrada</h5>
+      <p class="card-text mb-4">
+        A página que você está procurando não existe ou foi movida.
+      </p>
+      <a routerLink="/" class="btn btn-outline-primary">
+        Voltar para a página inicial
+      </a>
+    </div>
+
+    <div class="card-footer mt-4 fs-6">
+      &copy; 2025 The Book
+    </div>
+
+  </div>
+</section>
