--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-header *ngIf="!hideHeader()"></app-header>
+<div class="main-content">
+  <router-outlet></router-outlet>
+</div>
+<app-footer *ngIf="!hideFooter()"></app-footer>
