--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,20 @@
 @use './reset.scss' as *;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+app-root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1; // takes all available space
+}
