--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -73,7 +73,7 @@
 
         <div *ngIf="!isUserLoggedIn()" class="d-flex gap-2 ms-5 ms-md-0">
           <button
-            class="btn btn-lg btn-outline-dark d-flex align-items-center gap-1 responsive-auth-btn"
+            class="btn btn-lg btn-outline-dark d-flex align-items-center gap-1 responsive-sm-btn"
             routerLink="/login"
             id="botao-login"
           >
@@ -81,7 +81,7 @@
             <p class="hide" >Login</p>
           </button>
           <button
-            class="btn btn-lg btn-warning d-flex align-items-center gap-1 responsive-auth-btn"
+            class="btn btn-lg btn-warning d-flex align-items-center gap-1 responsive-sm-btn"
             routerLink="/register"
             id="botao-cadastar"
           >
