--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,20 @@
 @use './reset.scss' as *;
 
-html, body {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.hide{
+  display: block;
 }
 
-body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+@media (max-width: 576px) {
+  .responsive-sm-btn {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
 
-app-root {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
+  .hide{
+    display: none;
+  }
 
-.main-content {
-  flex: 1; // takes all available space
 }
