--- a/src/app/pages/receita/criar/criar.component.html
+++ b/src/app/pages/receita/criar/criar.component.html
@@ -41,6 +41,7 @@
               class="btn btn-lg responsive-sm-btn btn-warning text-white"
               id="button-voltar"
               (click)="goBack()"
+              type="button"
             >
               VOLTAR
             </button>
@@ -50,7 +51,7 @@
                 <button
                   class="btn btn-lg responsive-sm-btn btn-danger"
                   id="button-limpar"
-                  (click)="reset()"
+                  type="reset"
                 >
                   LIMPAR
                 </button>
