--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,9 @@
   <mat-card class="d-flex align-items-center m-auto h-auto p-5 shadow-lg position-relative" style="max-width: 600px; width: 100%;">
 
     <div class="d-flex justify-content-start">
-      <img src="assets/img/logo.webp" alt="logo" width="50px" height="auto" class="position-absolute top-0 start-0 m-3">
+      <a routerLink="/" style="cursor: pointer;">
+        <img src="assets/img/logo.webp" alt="logo" width="50px" height="auto" class="position-absolute top-0 start-0 m-3">
+      </a>
     </div>
 
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="d-flex flex-column gap-1">
@@ -62,7 +64,7 @@
 
       </mat-card-content>
 
-      <mat-card-actions class="d-flex gap-3 justify-content-center">
+      <mat-card-actions class="d-flex justify-content-center">
 
         <button
            class="btn btn-lg btn-success"
@@ -73,22 +75,14 @@
           LOGIN
         </button>
 
-        <button
-          class="btn btn-lg btn-danger"
-          type="button"
-          id="button-inicio"
-          (click)="redirectToInicio()"
-        >
-          INÍCIO
-        </button>
-
       </mat-card-actions>
 
       <mat-card-footer>
           <a
             routerLink="/register"
             id="link-registre-se"
-            class="text-decoration-none text-black"
+            class="text-decoration-none text-reset"
+            style="cursor: pointer;"
           >
             Ainda não possui uma conta? <strong>Registre-se</strong>
           </a>
