feat(reusable card) began creating a reusable card

--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,1 +1,19 @@
-<p>card works!</p>
+
+<section class="container d-flex justify-content-center align-items-center" >
+
+  <mat-card>
+
+    <mat-card-header>
+      <mat-card-title>Titulo</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content></mat-card-content>
+
+    <mat-card-actions>
+      <button>Editar</button>
+      <button>Deletar</button>
+    </mat-card-actions>
+
+  </mat-card>
+
+</section>
