--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,13 +14,13 @@
           id="logo"
         >
           <p class="fw-bolder fs-2 text-dark hide">The Book</p>
-          <img src="assets/img/logo.webp" alt="Logo" width="70px" height="auto" class="">
+          <img src="assets/img/logo.webp" alt="Logo" width="70px" height="auto">
         </a>
       </div>
 
       <div>
 
-        <div *ngIf="isUserLoggedIn()" class="d-flex gap-2">
+        <div *ngIf="isUserLoggedIn" class="d-flex gap-2">
           <button
               class="btn btn-lg btn-outline-dark flex-fill fs-5"
               (click)="redirectMeuLivro()"
@@ -71,7 +71,7 @@
 
         </div>
 
-        <div *ngIf="!isUserLoggedIn()" class="d-flex gap-2 ms-5 ms-md-0">
+        <div *ngIf="!isUserLoggedIn" class="d-flex gap-2 ms-5 ms-md-0">
           <button
             class="btn btn-lg btn-outline-dark d-flex align-items-center gap-1 responsive-sm-btn"
             routerLink="/login"
