feat(register,login) integrando componentes a api

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,8 +1,8 @@
 <section class="container mt-md-5 mt-3">
-  <div class="row align-items-center justify-content-center gy-4">
+  <div class="row align-items-center justify-content-center gy-4 ">
 
     <!-- Texto -->
-    <div class="col-12 col-md-6">
+    <div class="col-12 col-md-6 blur-container">
       <h1 class="mb-3">Sobre o The Book</h1>
       <p>
         Bem-vindo ao <strong>The Book</strong>, o destino definitivo para os entusiastas da culinária! Seja você um chef experiente ou esteja apenas começando sua jornada na cozinha, o The Book foi projetado para ser sua fonte principal de descobertas, compartilhamento e exploração de receitas deliciosas de todo o mundo.
