--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,19 +1,18 @@
+<section class="container d-flex my-4">
 
-<section class="container d-flex justify-content-center align-items-center" >
+    <mat-card class="shadow-lg d-flex flex-column p-5">
 
-  <mat-card>
+      <mat-card-header>
+        <mat-card-title>TITULO RECEITA</mat-card-title>
+      </mat-card-header>
 
-    <mat-card-header>
-      <mat-card-title>Titulo</mat-card-title>
-    </mat-card-header>
+      <mat-card-footer>
+        <button>EDITAR</button>
+        <button>VER</button>
+      </mat-card-footer>
 
-    <mat-card-content></mat-card-content>
-
-    <mat-card-actions>
-      <button>Editar</button>
-      <button>Deletar</button>
-    </mat-card-actions>
-
-  </mat-card>
+    </mat-card>
 
 </section>
+
+
