--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 
-<header class="container rounded-4 py-4 shadow-sm mb-2 mt-1">
+<header class="container rounded-4 py-4 shadow-sm mb-2 mt-1 bg-white">
 
   <div class="d-flex align-items-center text-center justify-content-evenly">
 
