--- a/src/app/pages/meu-livro/meu-livro.component.html
+++ b/src/app/pages/meu-livro/meu-livro.component.html
@@ -1,3 +1,16 @@
-<p>meu-livro works!</p>
-<p>Id = {{id()}}</p>
-<app-card></app-card>
+<section class="d-flex justify-content-center m-5 p-5">
+
+  <form [formGroup]="form">
+    <mat-form-field appearance="outline">
+      <mat-label>Favorite Food</mat-label>
+      <mat-select [formControl]="foodControl" name="food">
+        <mat-option>None</mat-option>
+        @for (food of foods; track food) {
+          <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+    <p class="fs-1">Selected: {{foodControl.value}}</p>
+  </form>
+
+</section>
