--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,6 @@
-<footer class="my-3">
-  <hr>
+<footer class="my-2 bg-white">
 
-  <div class="container">
+  <div class="container py-4">
 
     <div class="d-flex flex-column flex-md-row align-items-center justify-content-between text-center gap-1 gap-md-0">
 
