--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,7 @@
 html, body { height: 100%; }
 body {
   margin: 0;
-  font-family: Roboto,
-  "Helvetica Neue", sans-serif;
+  font-family: 'Fredoka', sans-serif;
   background-image: url('assets/img/backGround.png');
   background-size: cover; // makes the image cover the whole screen
   background-repeat: no-repeat; // prevents tiling
@@ -31,3 +30,4 @@ body {
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
+
