feat(receitas) implementando service das receitas e preparando o terreno

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,6 +16,7 @@
           [id]="receitas.id!"
           [categoria]="receitas.categoria"
           [nome]="receitas.nome"
+          [home]="true"
           (acao1)="editarReceita($event)"
           (acao2)="irParaReceita($event)"
         ></app-card>
