--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -15,7 +15,7 @@
       </mat-card-header>
     </div>
 
-    <div class="card-footer">
+    <div *ngIf="!home" class="card-footer d-flex gap-2">
       <button
         type="button"
         (click)="inserirAcao()"
@@ -23,6 +23,14 @@
         style="width:40px; height: 40px;"
       >
          <mat-icon>mode_edit</mat-icon>
+      </button>
+      <button
+        type="button"
+        (click)="inserirAcao2()"
+        class="btn btn-sm btn-outline-dark fw-bolder blur-container d-flex align-items-center"
+        style="width:40px; height: 40px;"
+      >
+         <mat-icon>delete_forever</mat-icon>
       </button>
     </div>
 
